<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logotext"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:text="Create an account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/regisPhoneNum"
                    android:padding="10dp"
                    android:ems="1"
                    android:inputType="phone"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    android:textColor="@color/grey"
                    android:background="@drawable/background_shape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
                <TextView
                    android:text="@string/password"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/regisPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_shape"
                    android:ems="1"
                    android:fontFamily="@font/red_hat_display_bold"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
                <TextView
                    android:text="@string/confirm_password"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/regisConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_shape"
                    android:ems="1"
                    android:fontFamily="@font/red_hat_display_bold"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="LabelFor" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="Already have an account?"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:id="@+id/logInView"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Log in"
                        android:textColor="@color/primary"
                        android:clickable="true"
                        android:onClick="onLogInClicked"
                        tools:ignore="HardcodedText"
                        android:focusable="true" />
                </LinearLayout>
                <Button
                    android:id="@+id/login"
                    android:text="@string/create_a_free_account"
                    android:textStyle="bold|normal"
                    android:layout_marginTop="25sp"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>